# DevEngine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE-3RD-PARTY.txt  README.md  TODO.txt  makefile
core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters  makefile
core/include/core/: Application.h  Array.h  Bitset.h  Config.h  ConfigInternal.h  ConfigMacros.h  Error.h  FileStream.h  FileSystem.h  InitialiserList.h  List.h  Log.h  Log.inl  LogBuffer.h  LogManager.h  Macros.h  MacrosInternal.h  MacrosInternals.h  Main.h  Map.h  Memory.h  Numeric.h  Numeric.inl  Platform.h  Rectangle.h  Set.h  Singleton.h  Singleton.inl  String.h  StringStream.h  Thread.h  Tokeniser.h  Types.h  Utility.h  UtilityMacros.h  UtilityMacrosInternal.h  Variadic.h  Vector.h
core/include/core/debug/: AllocationTrace.h  AllocationTracker.h  Assert.h  StackTrace.h
core/include/core/inline/: AllocationTracker.inl  Bitset.inl  FileStream.inl  Log.inl  LogBuffer.inl  LogManager.inl  Memory.inl  Numeric.inl  Rectangle.inl  Singleton.inl
core/include/core/maths/: Angle.h  Matrix4.h  Utility.h  (+3 more)
core/source/: Application.cpp  Bitset.cpp  Error.cpp  FileSystem.cpp  Log.cpp  LogBuffer.cpp  LogManager.cpp  Memory.cpp  Rectangle.cpp  String.cpp  Tokeniser.cpp  Types.cpp
core/source/debug/: AllocationTrace.cpp  AllocationTracker.cpp  Assert.cpp
core/source/maths/: Angle.cpp  Matrix4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
core/source/memory/: AllocationPolicy.cpp  AllocationPolicyBase.cpp
graphics/: CMakeLists.txt  graphics.vcxproj  graphics.vcxproj.filters  makefile
graphics/include/graphics/: AccessMode.h  Colour.h  DisplayMode.h  Effect.h  EffectCode.h  EffectCodeLoader.h  EffectSourceCodeReader.h  GraphicsAdapter.h  GraphicsAdapterManager.h  GraphicsBuffer.h  GraphicsConfig.h  GraphicsContext.h  GraphicsContextManager.h  GraphicsDevice.h  GraphicsDeviceManager.h  GraphicsEnumerations.h  GraphicsResource.h  Image.h  ImageFormat.h  ImageLoader.h  IndexBuffer.h  LogUtility.h  PNGReader.h  Shader.h  UniformBuffer.h  VertexBufferState.h  VertexElement.h  Viewport.h  Window.h  WindowManager.h
graphics/source/: Colour.cpp  DisplayMode.cpp  EffectCodeLoader.cpp  GraphicsAdapterManager.cpp  GraphicsConfig.cpp  GraphicsContextManager.cpp  GraphicsDevice.cpp  GraphicsDeviceManager.cpp  Image.cpp  ImageLoader.cpp  IndexBuffer.cpp  LogUtility.cpp  PNGReader.cpp  PngReader.cpp  Viewport.cpp
platform/: CMakeLists.txt  makefile  platform.vcxproj  platform.vcxproj.filters
platform/include/platform/: GraphicsConfigChooser.h  GraphicsContext.h  GraphicsExtensionHelper.h  GraphicsExtensionLoader.h  GraphicsExtensionManager.h  GraphicsFunctionUtility.h  PlatformInternal.h  TypesInternal.h  Utility.h  Version.h
platform/source/: GraphicsExtensionHelper.cpp  GraphicsExtensionLoader.cpp  GraphicsFunctionUtility.cpp  TypesInternal.cpp  Utility.cpp  Version.cpp
platform/source/glx/: GLX.cpp  GLXGraphicsConfigChooser.cpp  GLXGraphicsContext.cpp  GLXGraphicsFunctionUtility.cpp
platform/source/linux/: LinuxThread.cpp
platform/source/null/: NullLogManager.cpp
platform/source/opengl/: OpenGL.cpp  OpenGLEffect.cpp  OpenGLEffectSourceCodeReader.cpp  OpenGLGraphicsBuffer.cpp  OpenGLGraphicsBufferBase.cpp  OpenGLGraphicsDevice.cpp  OpenGLIndexBuffer.cpp  OpenGLInterface.cpp  OpenGLShader.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexBufferState.cpp
platform/source/posix/: POSIX.cpp  POSIXFileStream.cpp  POSIXFileSystem.cpp  POSIXThread.cpp
platform/source/std/: STDLog.cpp  STDMain.cpp
platform/source/wgl/: WGL.cpp  WGLGraphicsConfig.cpp  WGLGraphicsConfigChooser.cpp  WGLGraphicsContext.cpp  WGLGraphicsContextBase.cpp  WGLGraphicsContextManager.cpp  WGLGraphicsDeviceFactory.cpp  WGLGraphicsDeviceManager.cpp  WGLGraphicsExtensionHelper.cpp  WGLGraphicsExtensionLoader.cpp  WGLGraphicsExtensionManager.cpp  WGLGraphicsFunctionUtility.cpp  WGLGraphicsInterfaceManager.cpp  WGLTemporaryGraphicsContext.cpp
platform/source/windows/: Windows.cpp  WindowsApplication.cpp  WindowsFileStream.cpp  WindowsFileSystem.cpp  WindowsGraphicsAdapter.cpp  WindowsGraphicsAdapterManager.cpp  WindowsGraphicsDeviceManager.cpp  WindowsIcon.cpp  WindowsLog.cpp  WindowsLogManager.cpp  WindowsMain.cpp  WindowsStackTrace.cpp  WindowsThread.cpp  WindowsWindow.cpp  WindowsWindowManager.cpp
platform/source/x/: X.cpp  XGraphicsAdapter.cpp  XGraphicsAdapterManager.cpp  XGraphicsDeviceManager.cpp  XWindow.cpp
samples/sample/: CMakeLists.txt  makefile  sample.vcxproj  sample.vcxproj.filters
samples/sample/assets/: effect.glsl  test.txt  кошка.txt
samples/sample/source/: Main.cpp
(+101 files in other folders)
